WIP:
visit FnDecl
	never null
refactor enum for sizes of datatypes
no unknowntype or null in isVoidlike
enum for buildInFunctions
would be safer if buildInFunctions are in symboltable
logs for unknown-contexts, error-like
VM, more conversion instructions -> emit as boolean wrong
optimation on the wrong spot emit And, Or
bruh wtf, call node for loop
visit newExpr
	skip if not of type array?